--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Sep 2021
+
+o Added Python API
+
 Version 2.4 (June 2021)
 
 o First release of renewed libcpdf. For earlier work, see the cpdf changelog
