--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
-Jan 2021: Added v2.5 (except MacOS ARM : to come Feb 2022)
+Mar 2022: Added v2.5.1 (including MacOS ARM)
+
+Jan 2022: Added v2.5 (except MacOS ARM : to come Feb 2022)
 
 Sep 2021: Added Python API
 
