New v2.5.2 including libjcpdf

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+Apr 2022: Added v2.5.2, .NET and JAVA.
+
 Mar 2022: Added v2.5.1 (including MacOS ARM)
 
 Jan 2022: Added v2.5 (except MacOS ARM : to come Feb 2022)
