--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Apr 2022: Added v2.5.2, .NET and JAVA.
+Apr 2022: Added v2.5.2, .NET and JAVA. Per-platform readmes
 
 Mar 2022: Added v2.5.1 (including MacOS ARM)
 
