--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+Aug 2022: Added v2.5.2a bugfix to addTextSimple
+
 Apr 2022: Added v2.5.2, .NET and JAVA. Per-platform readmes
 
 Mar 2022: Added v2.5.1 (including MacOS ARM)
